// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox render should render properly when minimum props are passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    disabled={false}
    label="hello check"
    onCheck={[Function]}
    value={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-checked": false,
      "children": <label>
        hello check
      </label>,
      "className": "check-box",
      "onClick": [Function],
      "onKeyDown": [Function],
      "role": "checkbox",
      "tabIndex": 0,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "hello check",
      },
      "ref": null,
      "rendered": "hello check",
      "type": "label",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-checked": false,
        "children": <label>
          hello check
        </label>,
        "className": "check-box",
        "onClick": [Function],
        "onKeyDown": [Function],
        "role": "checkbox",
        "tabIndex": 0,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "hello check",
        },
        "ref": null,
        "rendered": "hello check",
        "type": "label",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CheckBox render should render properly when minimum props are passed 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    disabled={true}
    label="hello check"
    onCheck={[Function]}
    value={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-checked": false,
      "children": <label>
        hello check
      </label>,
      "className": "check-box disabled",
      "onClick": [Function],
      "onKeyDown": [Function],
      "role": "checkbox",
      "tabIndex": 0,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "hello check",
      },
      "ref": null,
      "rendered": "hello check",
      "type": "label",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-checked": false,
        "children": <label>
          hello check
        </label>,
        "className": "check-box disabled",
        "onClick": [Function],
        "onKeyDown": [Function],
        "role": "checkbox",
        "tabIndex": 0,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "hello check",
        },
        "ref": null,
        "rendered": "hello check",
        "type": "label",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CheckBox render should render properly when minimum props are passed 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    disabled={false}
    label="hello check"
    onCheck={[Function]}
    value={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-checked": true,
      "children": <label>
        hello check
      </label>,
      "className": "check-box checked",
      "onClick": [Function],
      "onKeyDown": [Function],
      "role": "checkbox",
      "tabIndex": 0,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "hello check",
      },
      "ref": null,
      "rendered": "hello check",
      "type": "label",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-checked": true,
        "children": <label>
          hello check
        </label>,
        "className": "check-box checked",
        "onClick": [Function],
        "onKeyDown": [Function],
        "role": "checkbox",
        "tabIndex": 0,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "hello check",
        },
        "ref": null,
        "rendered": "hello check",
        "type": "label",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
